# poc-semantic-release

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: pr-linter.yaml  release.yaml
conda/: dev.yaml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/talk/osl-pycafe/: environment.yaml  intro-to-semantic-release.ipynb
poc_semantic_release/: __init__.py  poc_semantic_release.py
tests/: test_poc_semantic_release.py
