[tool.poetry]
name = "poc-semantic-release"
version = "1.3.3"
description = "PoC Semantic Release"
authors = ["Ivan Ogasawara <ivan.ogasawara@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ["py34", "py35", "py36", "py37", "py38"]
exclude = "docs/"


